--- a/ANLEITUNG/index.html
+++ b/ANLEITUNG/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Niederländisches Sprachpaket für Zen-Cart 1.5.7 deutsch</title>
+<title>Niederländisches Sprachpaket für Zen-Cart 1.5.7h deutsch</title>
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="de">
-<meta name="description" content="Niederländisches Sprachpaket für Zen-Cart 1.5.7 deutsch">
+<meta name="description" content="Niederländisches Sprachpaket für Zen-Cart 1.5.7h deutsch">
 <link rel="stylesheet" type="text/css" href="includes/css/stylesheet.css">  
 <script type="text/javascript" src="includes/jscript/jscript_tabs.js"></script>
 </head>
 <body>
 <div id="wrapper">
 <div id="header">
-<h1>Niederländisches Sprachpaket für Zen-Cart 1.5.7 deutsch</h1>
+<h1>Niederländisches Sprachpaket für Zen-Cart 1.5.7h deutsch</h1>
 </div>
 
 <div id="slidetabsmenu" style="display: none;">
@@ -33,12 +33,12 @@
 <div class="textcontent">
 <div class="regularlist">
 
-<h2>Version 1.2.0 vom 08.12.2022</h2>
+<h2>Version 1.3.0 vom 04.04.2024</h2>
 <p>Anpassung des Dutch Language Pack (<a href="https://github.com/Zen4All-nl/Dutch-Language-Pack-for-Zen-Cart">https://github.com/Zen4All-nl/Dutch-Language-Pack-for-Zen-Cart</a>) von<br> 
   Zen4All
 <br>
 <br>
-  für die deutsche Zen Cart Version 1.5.7<br>
+  für die deutsche Zen Cart Version 1.5.7h<br>
   <br>
   utf-8<br>
   Frontend von native speaker übersetzt
@@ -76,7 +76,7 @@
 <h2>Installation</h2>
 <h3>Voraussetzungen</h3>
   <br />
-  Dieses Sprachpaket ist<strong> nur für die deutsche Zen-Cart 1.5.7 Version geeignet</strong></p>
+  Dieses Sprachpaket ist<strong> nur für die deutsche Zen-Cart 1.5.7h Version geeignet</strong></p>
   <p>Vor dem Einbau dieser Änderungen:<br />
 BACKUP von Shop und Datenbank machen! <br />
 Keine Haftung, Verwendung auf eigene Gefahr!<br />
