--- a/ANLEITUNG/index.html
+++ b/ANLEITUNG/index.html
@@ -46,7 +46,7 @@
   <br>
   Dieses Sprachpaket stellt eine komplette niederländische Übersetzung (Übersetzunggrad 100%) für das Frontend der Grundversion bereit.
   <br>
-  Die Sprachdefinitionen sind vollständig für die deutsche Zen Cart Version angepasst, so dass es auch mit PHP8 keine Probleme geben sollte.
+  Die Sprachdefinitionen sind vollständig für die deutsche Zen Cart Version 1.5.7h angepasst, so dass es auch mit PHP 8.2 keine Probleme geben sollte.
   <br>
   Dieses Sprachpaket geht davon aus, dass im Shop CSS Buttons verwendet werden und liefert keine niederländischen Grafikbuttons mit.
   <br>
